Reimplement TermInfoStore
This patch introduces storage of TermInfo in a property file rather than
in Akka persistence.

// FIXME: baseDir propagation
// FIXME: Failures: 1, Errors: 5

JIRA: CONTROLLER-2133
Change-Id: I24d296fc232fb62de30a8f00bdd5f381dc862115
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>